[package]
name = "base16cs"
version = "0.2.2"
edition = "2021"
authors = ["Santoso Wijaya <code@swijaya.me>"]

description = "A base16 color palette template renderer"
readme = "README.md"
keywords = ["base16", "colors", "colorscheme"]

homepage = "https://github.com/santoso-wijaya/base16cs"
repository = "https://github.com/santoso-wijaya/base16cs"
documentation = "https://docs.rs/base16cs"

license = "MIT"

[lib]
name = "base16cs"
path = "src/lib.rs"

[[bin]]
name = "render"
path = "src/bin/render.rs"
required-features = ["cli"]

[features]
default = ["liquid", "yaml"]
liquid = ["dep:liquid", "dep:glob"]
yaml = ["dep:serde_yaml"]
cli = ["dep:clap", "dep:exitcode"]

[dependencies]
anyhow = { version = "1.0" }
arrayvec = { version = "0.7", features = ["serde"] }
glob = { version = "0.3", optional = true }
liquid = { version = "0.26", features = ["stdlib"], optional = true }
num-traits = "0.2"
palette = { version = "0.7", features = ["serializing"] }
serde = { version = "1.0" }
serde_arrays = "0.1"
serde_yaml = { version = "0.9", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
exitcode = { version = "1.1.2", optional = true }

[dev-dependencies]
rstest = "0.21"
tempdir = "0.3"
