[package]
name = "base16cs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16cs = { path = "../base16cs" }
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
exitcode = "1.1.2"
