[package]
name = "base16cs"
version = "0.1.1"
edition = "2021"
authors = ["Santoso Wijaya <code@swijaya.me>"]

[lib]
name = "base16cs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
arrayvec = { version = "0.7", features = ["serde"] }
glob = "0.3"
liquid = { version = "0.26", features = ["stdlib"] }
num-traits = "0.2"
palette = { version = "0.7", features = ["serializing"] }
serde = { version = "1.0" }
serde_yaml = "0.9"

[dev-dependencies]
rstest = "0.19"
tempdir = "0.3"
