[package]
name = "base16cs"
version = "0.2.0"
edition = "2021"
authors = ["Santoso Wijaya <code@swijaya.me>"]

[lib]
name = "base16cs"
path = "src/lib.rs"

[features]
default = ["liquid", "yaml"]
liquid = ["dep:liquid", "dep:glob"]
yaml = ["dep:serde_yaml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
arrayvec = { version = "0.7", features = ["serde"] }
glob = { version = "0.3", optional = true }
liquid = { version = "0.26", features = ["stdlib"], optional = true }
num-traits = "0.2"
palette = { version = "0.7", features = ["serializing"] }
serde = { version = "1.0" }
serde_arrays = "0.1"
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
rstest = "0.19"
tempdir = "0.3"
